# sliced

./: .gitignore  Cargo.toml  README.md  post.md
src/: db.rs  discovery.rs  health_check.rs  main.rs  selection.rs  slice_assignments.rs
test/: dns_server.ts  main.ts  main_test.ts  rootdir.ts  server.ts
