
[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.82"
bytes = "1.7.1"
futures = "0.3.31"
hickory-resolver = "0.24.2"
libsql = "0.6.0"
log = "0.4"
pingora = "0.4.0"
pingora-core = "0.4.0"
pingora-error = "0.4.0"
pingora-http = "0.4.0"
pingora-ketama = "0.4.0"
pingora-load-balancing = "0.4.0"
pingora-proxy = "0.4.0"
serde = "1.0.217"
serde_json = "1.0.134"
tokio = { version = "1", features = ["default", "fs", "process", "io-util"] }
